--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,13 +12,19 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".function.main.MainActivity">
+        <activity android:name=".function.main.MainActivity" />
+        <activity
+            android:name=".function.login.LoginActivity"
+            android:launchMode="singleTask">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".function.register.RegisterActivity" />
+        <activity android:name=".function.forget_password.ForgetPasswordActivity" />
+
         <service android:name=".service.WebSocketService" />
     </application>
 
