--- a/app/build.gradle
+++ b/app/build.gradle
@@ -16,6 +16,11 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+    sourceSets {
+        main {
+            jniLibs.srcDirs = ['libs']//高德地图
+        }
+    }
 }
 
 dependencies {
